// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Should render Expense List With expense 1`] = `
<div
  className="content-container"
>
  <div
    className="list-header"
  >
    <div
      className="show-for-mobile"
    >
      Expenses
    </div>
    <div
      className="show-for-desktop"
    >
      Expense
    </div>
    <div
      className="show-for-desktop"
    >
      Amount
    </div>
  </div>
  <div
    className="list-body"
  >
    <ExpenseListItem
      amount={100}
      createdAt={0}
      description="gum"
      id="1"
      key="1"
      notes=""
    />
    <ExpenseListItem
      amount={12345}
      createdAt={-345600000}
      description="rent"
      id="2"
      key="2"
      notes=""
    />
    <ExpenseListItem
      amount={12345}
      createdAt={345600000}
      description="credit"
      id="3"
      key="3"
      notes=""
    />
  </div>
</div>
`;

exports[`should render when Expense list is empty  1`] = `
<div
  className="content-container"
>
  <div
    className="list-header"
  >
    <div
      className="show-for-mobile"
    >
      Expenses
    </div>
    <div
      className="show-for-desktop"
    >
      Expense
    </div>
    <div
      className="show-for-desktop"
    >
      Amount
    </div>
  </div>
  <div
    className="list-body"
  >
    <div
      className="list-item list-item--message"
    >
      <span>
        No expenses
      </span>
    </div>
  </div>
</div>
`;
